--- a/frontend/src/styles/config/colors.scss
+++ b/frontend/src/styles/config/colors.scss
@@ -166,3 +166,4 @@ $color-app-sidebar-icon-active: #a16a45;
 $color-app-sidebar-icon-hover: #e3dedb;
 
 $toolbar-sidebar-key-size: 2.2rem;
+$toolbar-sidebar-icon-size: 1.25rem;
